--- a/stamps.html
+++ b/stamps.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Коллекция марок Пуффендуя</title>
+  <title>День Пуффендуя 2025</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
@@ -79,11 +79,14 @@
       height: auto;
       width: auto;
       max-height: 200px;
+      max-width: 100%;
+      aspect-ratio: 3 / 4;
       transform: rotate(var(--angle)) scale(var(--scale));
       transition: transform 0.3s ease;
       cursor: pointer;
       image-rendering: auto;
       filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.2));
+      object-fit: cover;
     }
 
     .stamp:hover {
@@ -160,7 +163,7 @@
   </main>
 
   <footer>
-    С любовью от Когтеврана
+    © Подарок ко Дню Пуффендуя 2025. С любовью от Когтеврана
   </footer>
 
   <div class="modal" id="modal">
