--- a/stamps.html
+++ b/stamps.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>День Пуффендуя 2025</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@300;400;500;600;700&family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
@@ -173,11 +174,43 @@
 
   <script>
     const images = [
-      { src: "https://s1.radikal.cloud/2025/05/27/25_MAGDALENAEDINBURGd3ee275945966cf0.png", caption: "Магдалена, 5 курс" },
-      { src: "https://s1.radikal.cloud/2025/05/27/02_DZAREDKRIN6c3898a25459c100.png", caption: "Джаред, 6 курс" },
-      { src: "https://s1.radikal.cloud/2025/05/27/01_ENNIMURf768e6ed3324bd83.png", caption: "Энни, 1 курс" },
-      { src: "https://s1.radikal.cloud/2025/05/27/17_MIRANDAKEMBELLf927b822d8ef295d.png", caption: "Миранда, библиотекарь" },
-      { src: "https://s1.radikal.cloud/2025/05/27/32_PUFFENDUISKIEPLYSKA79f67cab6939f541.png", caption: "Пуффендуйские пляски" }
+      { src: "img/01_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+      { src: "img/02_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+      { src: "img/03_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+      { src: "img/04_СерафинаЛейн.png", caption: "Профессор Серафина Лейн" },
+      { src: "img/05_ЛиваУнсет.png", caption: "Профессор Лива Унсет, выпускник(Зима 2022-2023)" },
+      { src: "img/06_АльборекМортимер.png", caption: "Профессор Альборек Мортимер, выпускник(весна 2022)" },
+      { src: "img/07_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" },
+      { src: "img/08_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
+      { src: "img/09_WilliamJefferson.png", caption: "William Jefferson, 5 курс" },
+      { src: "img/10_АннаАнил.png", caption: "Анна Анил, 6 курс" },
+      { src: "img/11_ТуральфЭустад.png", caption: "Туральф Эустадг, 5 курс" },
+      { src: "img/12_ЭмильРозье.png", caption: "Эмиль Розье, 4 курс" },
+      { src: "img/13_ХьюСмелс.png", caption: "Хью Смелс, 4 курс" },
+      { src: "img/14_NanielEsper.png", caption: "Naniel Esper, 4 курс" },
+      { src: "img/15_АудунДеллингхейм.png", caption: "Аудун Деллингхейм, 4 курс" },
+      { src: "img/16_КеллиПейтон.png", caption: "Келли Пейтон, 3 курс" },
+      { src: "img/17_МирандаКэмбелл.png", caption: "Миранда Кэмбелл, 3 курс" },
+      { src: "img/18_ТомасРоуз.png", caption: "Томас Роуз, 2 курс" },
+      { src: "img/19_ХирсинВандерер.png", caption: "Хирсин Вандерер, 2 курс" },
+      { src: "img/20_LeonardMcFee.png", caption: "Leonard McFee, 2 курс" },
+      { src: "img/21_МарселинВудхарт.png", caption: "Марселин Вудхарт, 2 курс" },
+      { src: "img/22_ИкимираСаерс.png", caption: "Икимира Саерс, 1 курс" },
+      { src: "img/23_ValleByun.png", caption: "Valle Byun, 1 курс" },
+      { src: "img/24_ЭвелинОдри.png", caption: "Эвелин Одри, 1 курс" },
+      { src: "img/25_МагдаленаЭдинбург.png", caption: "Магдалена Эдинбург, 1 курс" },
+      { src: "img/26_ДаниэльХарт.png", caption: "Даниэль Харт, 1 курс" },
+      { src: "img/27_КромбергКиль.png", caption: "Кромберг Киль, 1 курс" },
+      { src: "img/28_ЧарлиГрэй.png", caption: "Чарли Грэй, 1 курс" },
+      { src: "img/29_AnneErekson.png", caption: "Anne Erekson, 1 курс" },
+      { src: "img/30_ТолстыйМонах.png", caption: "Толстый Монах, призрак факультета" },
+      { src: "img/31_ГражданинПифагорян.png", caption: "Гражданин Пифагорян, призрак факультета" },
+      { src: "img/32_ПуффендуйскиеПлюшка.png", caption: "Пуффендуйские плюшки, традиционное лакомство" },
+      { src: "img/33_ГномыХаффлеПаффле.png", caption: "Гномы Хаффле и Паффле" },
+      { src: "img/34_БарсукХаффи.png", caption: "Барсук Хаффи" },
+      { src: "img/35_КактусоваяДевочка.png", caption: "Кактусовая Девочка" },
+      { src: "img/36_ЧашаПенелопы.png", caption: "Чаша Пенелопы Пуффендуй, реликвия факультета" },
+      { src: "img/37_СборнаяКарамель.png", caption: "Сборная команда по квиддичу Карамель Эдинбург" },
     ];
 
     const rowPattern = [6, 5, 6, 5, 6, 5, 4];
