--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </section>
 
     <div class="open-button">
-      <a href="#stamps">Открыть коллекцию</a>
+      <a href="stamps.html">Открыть коллекцию</a>
     </div>
   </div>
 
