--- a/index.html
+++ b/index.html
@@ -186,11 +186,11 @@
 
     <section class="intro-section">
       <div class="collage">
-        <img src="https://s1.radikal.cloud/2025/05/27/25_MAGDALENAEDINBURGd3ee275945966cf0.png" alt="Магдалена">
-        <img src="https://s1.radikal.cloud/2025/05/27/02_DZAREDKRIN6c3898a25459c100.png" alt="Джаред">
-        <img src="https://s1.radikal.cloud/2025/05/27/01_ENNIMURf768e6ed3324bd83.png" alt="Энни">
-        <img src="https://s1.radikal.cloud/2025/05/27/17_MIRANDAKEMBELLf927b822d8ef295d.png" alt="Миранда">
-        <img src="https://s1.radikal.cloud/2025/05/27/32_PUFFENDUISKIEPLYSKA79f67cab6939f541.png" alt="Пуффендуйская плюшка">
+        <img src="img/36_ЧашаПенелопы.png" alt="Чаша Пенелопы">
+        <img src="img/14_NanielEsper.png" alt="Naniel Esper">
+        <img src="img/01_ЭнниМур.png" alt="Энни Мур">
+        <img src="img/21_МарселинВудхарт.png" alt="Марселин Вудхарт.png">
+        <img src="img/32_ПуффендуйскиеПлюшка.png" alt="Пуффендуйские плюшки">
       </div>
 
       <div class="message">
@@ -201,7 +201,7 @@
     </section>
 
     <div class="open-button">
-      <a href="stamps.html">Открыть коллекцию</a>
+      <a href="/stamps.html">Открыть коллекцию</a>
     </div>
   </div>
 
