--- a/stamps.html
+++ b/stamps.html
@@ -209,8 +209,8 @@
       { src: "img/33_ГномыХаффлеПаффле.png", caption: "Гномы Хаффле и Паффле" },
       { src: "img/34_БарсукХаффи.png", caption: "Барсук Хаффи" },
       { src: "img/35_КактусоваяДевочка.png", caption: "Кактусовая Девочка" },
-      { src: "img/36_ЧашаПенелопы.png", caption: "Чаша Пенелопы Пуффендуй, реликвия факультета" },
-      { src: "img/37_СборнаяКарамель.png", caption: "Сборная команда по квиддичу Карамель Эдинбург" },
+      { src: "img/36_ЧашаПенелопы.png", caption: "Чаша Пенелопы Пуффендуй, реликвия основательницы факультета" },
+      { src: "img/37_СборнаяКарамель.png", caption: "Сборная команда по квиддичу Карамель" },
     ];
 
     const rowPattern = [6, 5, 6, 5, 6, 5, 4];
