--- a/stamps.html
+++ b/stamps.html
@@ -190,8 +190,10 @@
 
   <main>
     <nav>
-      <a href="lottery.html">Почтовая лотерея</a>
-      <a href="memory.html">Huffmory game</a>
+	<a href="index.html">Главная</a>
+	<a href="stamps.html">Коллекция марок</a>
+	<a href="lottery.html">Pufftery Game</a>
+	<a href="memory.html">Huffmory Game</a>
     </nav>
     <div class="gallery" id="main-gallery"></div>
   </main>
