--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 
  <main>
     <nav>
-      <a href="lottery.html">Почтовая лотерея</a>
-      <a href="memory.html">Huffmory game</a>
+      <a href="lottery.html">Puffmory Game</a>
+      <a href="LOLOLO.html">Huffmory Game</a>
     </nav>
  </main>
 	  
