--- a/lottery.html
+++ b/lottery.html
@@ -190,6 +190,38 @@
 }
 
 
+.award {
+  background-color: rgba(210, 180, 140, 0.2);
+  border-radius: 8px;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 1.2rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.award h3 {
+  margin-top: 0;
+  text-align: center;
+  font-family: 'Cormorant Unicase', serif;
+}
+
+.award ol, .award ul {
+  margin: 0.5rem 0;
+}
+
+.award li {
+  margin-bottom: 0.5rem;
+}
+
+@media (max-width: 480px) {
+  .award {
+    font-size: 1rem;
+    padding: 0.8rem;
+  }
+}
+
     footer {
       text-align: center;
       padding: 1rem;
@@ -274,7 +306,12 @@
       <li>Нажмите "Начать заново" для новой попытки</li>
     </ol>
   </div>
-	
+	  
+<div class="award">
+	<h3>О наградах:</h3>
+Тут мы рассказывает о наградах, как только их согласуем  
+  </div>	
+	  
   </main>
 
   <script>
