--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
  <main>
     <nav>
-      <a href="lottery.html">Puffmory Game</a>
+      <a href="lottery.html">Pufftery Game</a>
       <a href="LOLOLO.html">Huffmory Game</a>
     </nav>
  </main>
