--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@
 
  <main>
     <nav>
-      <a href="lottery.html">Pufftery Game</a>
-      <a href="LOLOLO.html">Huffmory Game</a>
+	<a href="index.html">Главная</a>
+	<a href="stamps.html">Коллекция марок</a>
+	<a href="lottery.html">Pufftery Game</a>
     </nav>
  </main>
 	  
