--- a/stamps.html
+++ b/stamps.html
@@ -25,7 +25,7 @@
     }
 
     header {
-      padding: 2rem;
+      padding: 1rem 2rem;
       text-align: center;
       background-color: #E8D9B6;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -57,13 +57,13 @@
 	  display: flex;
 	  justify-content: center;
 	  gap: 1rem;
-	  margin: 1.5rem 0 1rem; 
+	  margin: 0.5rem 0 1rem; 
 	  width: 100%;
 	  
 	}
     
     main {
-      margin-top: 2rem;
+      margin-top: 0.5rem;
       padding-top: 1rem;
       z-index: 1;
       flex: 1;
@@ -170,8 +170,8 @@
       }
       	        nav {
         flex-wrap: wrap;
-		margin-top: 1rem;
-		padding-top: 1rem;
+		margin-top: 0.5rem;
+		padding-top: 0.5rem;
       }
     }
 
