--- a/lottery.html
+++ b/lottery.html
@@ -401,7 +401,7 @@
     <li>Ждите заслуженную награду, ведь вы не только азартны, но и прекрасны
       <br><br>
      P.S. Несмотря на все приложенные усилия, есть вероятность, что коварные беклы(да, именно они) все-таки помешают вам получить приз. 
-     Поэтому, если вам кажется, что ваш лотерейный билет был выигрышным, однако вы не увидели сообщения с поздравление, смело пишите нам!
+     Поэтому, если вам кажется, что ваш лотерейный билет был выигрышным, однако вы не увидели сообщения с поздравлением, смело пишите нам!
 Мы не вернем вам деньги, ведь лотерея бесплатная, но поможем получить заслуженный приз.  
   </ol> 
    
