--- a/index.html
+++ b/index.html
@@ -234,8 +234,9 @@
 
       <div class="message">
         <p><b>Дорогие пуффендуйцы!</b></p> 
-	  <p>В этот день ваш факультет сияет особенно ярко. От имени Когтеврана поздравляем вас с Днём Факультета! Мы восхищаемся вашей добротой, трудолюбием и сплочённостью.</p>
-        <p>В знак нашей дружбы мы подготовили для вас коллекцию марок — с вашими лицами, историями и символами. Пусть они принесут улыбку и вдохновение.</p>
+<p>Кто понимает важность совиной почты так, как понимают её Когтевранцы? Поэтому в этот день, день Пуффендуя, мы дарим вам от адептов орлиной, совиной и Тедди — почты лимитированную коллекцию марок, посвященных вашему факультету.</p>
+<p>Все марки источают запах свежих плюшек, добавляют +100 к ощущению тепла и просто красивые. Клейте марки на письма, чтобы сделать их еще более яркими, и сияйте, как новенький галлеон.</p>
+        
       </div>
     </section>
 
