--- a/lottery.html
+++ b/lottery.html
@@ -427,43 +427,43 @@
   <script>
     // Исправленный массив с марками
     const stamps = [
-      "img/01_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" ,
-      "img/07_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" ,
-      "img/08_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" ,
-      "img/30_ТолстыйМонах.png", caption: "Толстый Монах, призрак факультета" ,
-      "img/19_ХирсинВандерер.png", caption: "Хирсин Вандерер, 2 курс" ,
-      "img/02_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" ,
-      "img/09_WilliamJefferson.png", caption: "William Jefferson, 5 курс" ,
-      "img/31_ГражданинПифагорян.png", caption: "Гражданин Пифагорян, призрак факультета" ,
-      "img/10_АннаАнил.png", caption: "Анна Анил, 6 курс" ,
-      "img/29_AnneErekson.png", caption: "Anne Erekson, 1 курс" ,
-      "img/20_LeonardMcFee.png", caption: "Leonard McFee, 2 курс" ,
-      "img/03_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" ,
-      "img/11_ТуральфЭустад.png", caption: "Туральф Эустадг, 5 курс" ,
-      "img/12_ЭмильРозье.png", caption: "Эмиль Розье, 4 курс" ,
-      "img/27_КромбергКиль.png", caption: "Кромберг Киль, 1 курс" ,
-      "img/32_ПуффендуйскиеПлюшка.png", caption: "Пуффендуйские плюшки, традиционное лакомство" ,
-      "img/21_МарселинВудхарт.png", caption: "Марселин Вудхарт, 2 курс" ,
-      "img/33_ГномыХаффлеПаффле.png", caption: "Гномы Хаффле и Паффле" ,
-      "img/04_СерафинаЛейн.png", caption: "Профессор Серафина Лейн" ,
-      "img/13_ХьюСмелс.png", caption: "Хью Смелс, 4 курс" ,
-      "img/14_NanielEsper.png", caption: "Naniel Esper, 4 курс" ,
-      "img/22_ИкимираСаерс.png", caption: "Икимира Саерс, 1 курс" ,
-      "img/05_ЛиваУнсет.png", caption: "Профессор Лива Унсет, выпускник(Зима 2022-2023)" ,
-      "img/15_АудунДеллингхейм.png", caption: "Аудун Деллингхейм, 4 курс" ,
-      "img/16_КеллиПейтон.png", caption: "Келли Пейтон, 3 курс" ,
-      "img/34_БарсукХаффи.png", caption: "Барсук Хаффи" ,
-      "img/23_ValleByun.png", caption: "Valle Byun, 1 курс" ,
-      "img/06_АльборекМортимер.png", caption: "Профессор Альборек Мортимер, выпускник(весна 2022)" ,
-      "img/17_МирандаКэмбелл.png", caption: "Миранда Кэмбелл, 3 курс" ,
-      "img/18_ТомасРоуз.png", caption: "Томас Роуз, 2 курс" ,
-      "img/24_ЭвелинОдри.png", caption: "Эвелин Одри, 1 курс" ,
-      "img/35_КактусоваяДевочка.png", caption: "Кактусовая Девочка" ,
-      "img/25_МагдаленаЭдинбург.png", caption: "Магдалена Эдинбург, 1 курс" ,
-      "img/36_ЧашаПенелопы.png", caption: "Чаша Пенелопы Пуффендуй, реликвия основательницы факультета" ,
-      "img/26_ДаниэльХарт.png", caption: "Даниэль Харт, 1 курс" ,
-      "img/28_ЧарлиГрэй.png", caption: "Чарли Грэй, 1 курс" ,
-      "img/37_СборнаяКарамель.png", caption: "Сборная команда по квиддичу Карамель" ,
+{ src: "img/01_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+{ src: "img/07_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" },
+{ src: "img/08_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
+{ src: "img/30_ТолстыйМонах.png", caption: "Толстый Монах, призрак факультета" },
+{ src: "img/19_ХирсинВандерер.png", caption: "Хирсин Вандерер, 2 курс" },
+{ src: "img/02_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+{ src: "img/09_WilliamJefferson.png", caption: "William Jefferson, 5 курс" },
+{ src: "img/31_ГражданинПифагорян.png", caption: "Гражданин Пифагорян, призрак факультета" },
+{ src: "img/10_АннаАнил.png", caption: "Анна Анил, 6 курс" },
+{ src: "img/29_AnneErekson.png", caption: "Anne Erekson, 1 курс" },
+{ src: "img/20_LeonardMcFee.png", caption: "Leonard McFee, 2 курс" },
+{ src: "img/03_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+{ src: "img/11_ТуральфЭустад.png", caption: "Туральф Эустадг, 5 курс" },
+{ src: "img/12_ЭмильРозье.png", caption: "Эмиль Розье, 4 курс" },
+{ src: "img/27_КромбергКиль.png", caption: "Кромберг Киль, 1 курс" },
+{ src: "img/32_ПуффендуйскиеПлюшка.png", caption: "Пуффендуйские плюшки, традиционное лакомство" },
+{ src: "img/21_МарселинВудхарт.png", caption: "Марселин Вудхарт, 2 курс" },
+{ src: "img/33_ГномыХаффлеПаффле.png", caption: "Гномы Хаффле и Паффле" },
+{ src: "img/04_СерафинаЛейн.png", caption: "Профессор Серафина Лейн" },
+{ src: "img/13_ХьюСмелс.png", caption: "Хью Смелс, 4 курс" },
+{ src: "img/14_NanielEsper.png", caption: "Naniel Esper, 4 курс" },
+{ src: "img/22_ИкимираСаерс.png", caption: "Икимира Саерс, 1 курс" },
+{ src: "img/05_ЛиваУнсет.png", caption: "Профессор Лива Унсет, выпускник(Зима 2022-2023)" },
+{ src: "img/15_АудунДеллингхейм.png", caption: "Аудун Деллингхейм, 4 курс" },
+{ src: "img/16_КеллиПейтон.png", caption: "Келли Пейтон, 3 курс" },
+{ src: "img/34_БарсукХаффи.png", caption: "Барсук Хаффи" },
+{ src: "img/23_ValleByun.png", caption: "Valle Byun, 1 курс" },
+{ src: "img/06_АльборекМортимер.png", caption: "Профессор Альборек Мортимер, выпускник(весна 2022)" },
+{ src: "img/17_МирандаКэмбелл.png", caption: "Миранда Кэмбелл, 3 курс" },
+{ src: "img/18_ТомасРоуз.png", caption: "Томас Роуз, 2 курс" },
+{ src: "img/24_ЭвелинОдри.png", caption: "Эвелин Одри, 1 курс" },
+{ src: "img/35_КактусоваяДевочка.png", caption: "Кактусовая Девочка" },
+{ src: "img/25_МагдаленаЭдинбург.png", caption: "Магдалена Эдинбург, 1 курс" },
+{ src: "img/36_ЧашаПенелопы.png", caption: "Чаша Пенелопы Пуффендуй, реликвия основательницы факультета" },
+{ src: "img/26_ДаниэльХарт.png", caption: "Даниэль Харт, 1 курс" },
+{ src: "img/28_ЧарлиГрэй.png", caption: "Чарли Грэй, 1 курс" },
+{ src: "img/37_СборнаяКарамель.png", caption: "Сборная команда по квиддичу Карамель" },
     ];
 
     // Константы для особых категорий
