--- a/lottery.html
+++ b/lottery.html
@@ -427,22 +427,22 @@
   <script>
     // Исправленный массив с марками
     const stamps = [
-{ src: "img/01_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
-{ src: "img/07_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" },
-{ src: "img/08_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
-{ src: "img/30_ТолстыйМонах.png", caption: "Толстый Монах, призрак факультета" },
-{ src: "img/19_ХирсинВандерер.png", caption: "Хирсин Вандерер, 2 курс" },
-{ src: "img/02_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
-{ src: "img/09_WilliamJefferson.png", caption: "William Jefferson, 5 курс" },
-{ src: "img/31_ГражданинПифагорян.png", caption: "Гражданин Пифагорян, призрак факультета" },
-{ src: "img/10_АннаАнил.png", caption: "Анна Анил, 6 курс" },
-{ src: "img/29_AnneErekson.png", caption: "Anne Erekson, 1 курс" },
-{ src: "img/20_LeonardMcFee.png", caption: "Leonard McFee, 2 курс" },
-{ src: "img/03_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
-{ src: "img/11_ТуральфЭустад.png", caption: "Туральф Эустадг, 5 курс" },
-{ src: "img/12_ЭмильРозье.png", caption: "Эмиль Розье, 4 курс" },
-{ src: "img/27_КромбергКиль.png", caption: "Кромберг Киль, 1 курс" },
-{ src: "img/32_ПуффендуйскиеПлюшка.png", caption: "Пуффендуйские плюшки, традиционное лакомство" },
+{ src: "/img/01_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+{ src: "/img/07_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" },
+{ src: "/img/08_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
+{ src: "/img/30_ТолстыйМонах.png", caption: "Толстый Монах, призрак факультета" },
+{ src: "/img/19_ХирсинВандерер.png", caption: "Хирсин Вандерер, 2 курс" },
+{ src: "/img/02_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+{ src: "/img/09_WilliamJefferson.png", caption: "William Jefferson, 5 курс" },
+{ src: "/img/31_ГражданинПифагорян.png", caption: "Гражданин Пифагорян, призрак факультета" },
+{ src: "/img/10_АннаАнил.png", caption: "Анна Анил, 6 курс" },
+{ src: "/img/29_AnneErekson.png", caption: "Anne Erekson, 1 курс" },
+{ src: "/img/20_LeonardMcFee.png", caption: "Leonard McFee, 2 курс" },
+{ src: "/img/03_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+{ src: "/img/11_ТуральфЭустад.png", caption: "Туральф Эустадг, 5 курс" },
+{ src: "/img/12_ЭмильРозье.png", caption: "Эмиль Розье, 4 курс" },
+{ src: "/img/27_КромбергКиль.png", caption: "Кромберг Киль, 1 курс" },
+{ src: "/img/32_ПуффендуйскиеПлюшка.png", caption: "Пуффендуйские плюшки, традиционное лакомство" },
 { src: "img/21_МарселинВудхарт.png", caption: "Марселин Вудхарт, 2 курс" },
 { src: "img/33_ГномыХаффлеПаффле.png", caption: "Гномы Хаффле и Паффле" },
 { src: "img/04_СерафинаЛейн.png", caption: "Профессор Серафина Лейн" },
