--- a/lottery.html
+++ b/lottery.html
@@ -427,43 +427,43 @@
   <script>
     // Исправленный массив с марками
     const stamps = [
-{ src: "/img/01_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
-{ src: "/img/07_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" },
-{ src: "/img/08_EvylinMcFie.png", caption: "Староста факультета Evylin McFie, 5 курс" },
-{ src: "/img/30_ТолстыйМонах.png", caption: "Толстый Монах, призрак факультета" },
-{ src: "/img/19_ХирсинВандерер.png", caption: "Хирсин Вандерер, 2 курс" },
-{ src: "/img/02_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
-{ src: "/img/09_WilliamJefferson.png", caption: "William Jefferson, 5 курс" },
-{ src: "/img/31_ГражданинПифагорян.png", caption: "Гражданин Пифагорян, призрак факультета" },
-{ src: "/img/10_АннаАнил.png", caption: "Анна Анил, 6 курс" },
-{ src: "/img/29_AnneErekson.png", caption: "Anne Erekson, 1 курс" },
-{ src: "/img/20_LeonardMcFee.png", caption: "Leonard McFee, 2 курс" },
-{ src: "/img/03_АлисаИндиго.png", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
-{ src: "/img/11_ТуральфЭустад.png", caption: "Туральф Эустадг, 5 курс" },
-{ src: "/img/12_ЭмильРозье.png", caption: "Эмиль Розье, 4 курс" },
-{ src: "/img/27_КромбергКиль.png", caption: "Кромберг Киль, 1 курс" },
-{ src: "/img/32_ПуффендуйскиеПлюшка.png", caption: "Пуффендуйские плюшки, традиционное лакомство" },
-{ src: "img/21_МарселинВудхарт.png", caption: "Марселин Вудхарт, 2 курс" },
-{ src: "img/33_ГномыХаффлеПаффле.png", caption: "Гномы Хаффле и Паффле" },
-{ src: "img/04_СерафинаЛейн.png", caption: "Профессор Серафина Лейн" },
-{ src: "img/13_ХьюСмелс.png", caption: "Хью Смелс, 4 курс" },
-{ src: "img/14_NanielEsper.png", caption: "Naniel Esper, 4 курс" },
-{ src: "img/22_ИкимираСаерс.png", caption: "Икимира Саерс, 1 курс" },
-{ src: "img/05_ЛиваУнсет.png", caption: "Профессор Лива Унсет, выпускник(Зима 2022-2023)" },
-{ src: "img/15_АудунДеллингхейм.png", caption: "Аудун Деллингхейм, 4 курс" },
-{ src: "img/16_КеллиПейтон.png", caption: "Келли Пейтон, 3 курс" },
-{ src: "img/34_БарсукХаффи.png", caption: "Барсук Хаффи" },
-{ src: "img/23_ValleByun.png", caption: "Valle Byun, 1 курс" },
-{ src: "img/06_АльборекМортимер.png", caption: "Профессор Альборек Мортимер, выпускник(весна 2022)" },
-{ src: "img/17_МирандаКэмбелл.png", caption: "Миранда Кэмбелл, 3 курс" },
-{ src: "img/18_ТомасРоуз.png", caption: "Томас Роуз, 2 курс" },
-{ src: "img/24_ЭвелинОдри.png", caption: "Эвелин Одри, 1 курс" },
-{ src: "img/35_КактусоваяДевочка.png", caption: "Кактусовая Девочка" },
-{ src: "img/25_МагдаленаЭдинбург.png", caption: "Магдалена Эдинбург, 1 курс" },
-{ src: "img/36_ЧашаПенелопы.png", caption: "Чаша Пенелопы Пуффендуй, реликвия основательницы факультета" },
-{ src: "img/26_ДаниэльХарт.png", caption: "Даниэль Харт, 1 курс" },
-{ src: "img/28_ЧарлиГрэй.png", caption: "Чарли Грэй, 1 курс" },
-{ src: "img/37_СборнаяКарамель.png", caption: "Сборная команда по квиддичу Карамель" },
+"img/01_ЭнниМур.png",
+"img/07_ГрэйсГрейлэнд.png",
+"img/08_EvylinMcFie.png",
+"img/30_ТолстыйМонах.png",
+"img/19_ХирсинВандерер.png",
+"img/02_ДжаредКрин.png",
+"img/09_WilliamJefferson.png",
+"img/31_ГражданинПифагорян.png",
+"img/10_АннаАнил.png",
+"img/29_AnneErekson.png",
+"img/20_LeonardMcFee.png",
+"img/03_АлисаИндиго.png",
+"img/11_ТуральфЭустад.png",
+"img/12_ЭмильРозье.png",
+"img/27_КромбергКиль.png",
+"img/32_ПуффендуйскиеПлюшка.png",
+"img/21_МарселинВудхарт.png", 
+"img/33_ГномыХаффлеПаффле.png", 
+"img/04_СерафинаЛейн.png", 
+"img/13_ХьюСмелс.png", 
+"img/14_NanielEsper.png", 
+"img/22_ИкимираСаерс.png", 
+"img/05_ЛиваУнсет.png", 
+"img/15_АудунДеллингхейм.png",
+"img/16_КеллиПейтон.png", 
+"img/34_БарсукХаффи.png",
+"img/23_ValleByun.png", 
+"img/06_АльборекМортимер.png",
+"img/17_МирандаКэмбелл.png",
+"img/18_ТомасРоуз.png",
+"img/24_ЭвелинОдри.png",
+"img/35_КактусоваяДевочка.png",
+"img/25_МагдаленаЭдинбург.png",
+"img/36_ЧашаПенелопы.png",
+"img/26_ДаниэльХарт.png",
+"img/28_ЧарлиГрэй.png",
+"img/37_СборнаяКарамель.png",
     ];
 
     // Константы для особых категорий
