--- a/lottery.html
+++ b/lottery.html
@@ -468,25 +468,25 @@
 
     // Константы для особых категорий
     const выпускники = [
-      "https://s1.radikal.cloud/2025/05/29/01_ENNIMURfe4d0f1a6fda83dd.png",
-      "https://s1.radikal.cloud/2025/05/29/02_DZAREDKRINf4ecab63356ede07.png",
-      "https://s1.radikal.cloud/2025/05/29/03_ALISAINDIGOd7e134e68279602e.png",
-      "https://s1.radikal.cloud/2025/05/29/04_SERAFINALEINc8b3f6e4bf3956a8.png",
-      "https://s1.radikal.cloud/2025/05/29/05_LIVAUNSET3e1956b0ba87ade5.png",
-      "https://s1.radikal.cloud/2025/05/29/06_ALBOREKMORTIMERabbbd48c002d817c.png"
+      "img/01_ЭнниМур.png",
+      "img/02_ДжаредКрин.png",
+      "img/03_АлисаИндиго.png",
+      "img/04_СерафинаЛейн.png", 
+      "img/05_ЛиваУнсет.png", 
+      "img/06_АльборекМортимер.png",
     ];
 
-    const кухня = "https://s1.radikal.cloud/2025/05/29/32_PUFFENDUISKIEPLYSKA1c6836c9db127b49.png";
+    const кухня = "img/32_ПуффендуйскиеПлюшка.png";
 
     const традиции = [
-      "https://s1.radikal.cloud/2025/05/29/30_TOLSTYIMONAK640a956585669a94.png",
-      "https://s1.radikal.cloud/2025/05/29/31_GRAZDANINPIFAGORYNb1425578fbf3793a.png",
-      "https://s1.radikal.cloud/2025/05/29/32_PUFFENDUISKIEPLYSKA1c6836c9db127b49.png",
-      "https://s1.radikal.cloud/2025/05/29/33_GNOMYKAFFLEPAFFLE6c55ba431272e639.png",
-      "https://s1.radikal.cloud/2025/05/29/34_BARSUKKAFFI2e7da73b21cf85bf.png",
-      "https://s1.radikal.cloud/2025/05/29/35_KAKTUSOVAYDEVOCKA8023e3c92d0d6abe.png",
-      "https://s1.radikal.cloud/2025/05/29/36_CASAPENELOPYc36c64857d409b35.png",
-      "https://s1.radikal.cloud/2025/05/29/37_SBORNAYKARAMEL03eb773b6c2f6cb7.png"
+        "img/30_ТолстыйМонах.png",
+        "img/31_ГражданинПифагорян.png",
+        "img/32_ПуффендуйскиеПлюшка.png",
+        "img/33_ГномыХаффлеПаффле.png", 
+        "img/34_БарсукХаффи.png",
+        "img/35_КактусоваяДевочка.png",
+        "img/36_ЧашаПенелопы.png",
+        "img/37_СборнаяКарамель.png",
     ];
 
     const cardsRow = document.getElementById('cardsRow');
