--- a/lottery.html
+++ b/lottery.html
@@ -375,17 +375,17 @@
   <ol>
     <li>Участвовать могут абсолютно все. Количество попыток ограничено лишь вашей степенью терпения</li>
     <li>Перед вами 6 закрытых марок - откройте их все</li>
-    <li>Основные условия выигрыша:
+    <li>Условия выигрыша:
       <ul>
-        <li>3+ <strong>одинаковые</strong> любые марки - обычный выигрыш</li>
-        <li>3+ <strong>любые</strong> марки с выпускниками факультета Пуффендуй - особый приз</li>
-        <li>3+ <strong>одинаковые</strong> марки "Пуффендуйские плюшки" - особый приз</li>
-        <li>3+ <strong>любые</strong> марки из категории "Символы факультета" - особый приз</li>
+        <li>3+ <strong>одинаковые</strong> любые марки - золотая марка "Счастливчик"</li>
+        <li>3+ <strong>любые</strong> марки с выпускниками факультета Пуффендуй - золотая марка "Знаток истории"</li>
+        <li>3+ <strong>одинаковые</strong> марки "Пуффендуйские плюшки" - золотая марка "Сладкая булочка"</li>
+        <li>3+ <strong>любые</strong> марки из категории "Символы факультета" - золотая марка "Ценитель традиций"</li>
       </ul>
     </li>
     <li>Невероятная удача:
       <ul>
-        <li>Собраны два или более сета одновременно</li>
+        <li>Собраны два или более сета одновременно - золотая марка "Жидкая удача"</li>
       </ul>
     </li>
     <li>Нажмите "Начать заново" для новой попытки</li>
@@ -398,7 +398,7 @@
   <br><br>
     <li>Сделайте скриншот, на котором будет четко виден ваш результат</li>
     <li>Скорее опубликуйте его в теме с подарком или просто пришлите Блейк Эллингтон любым удобным вам способом
-    <li>Ждите заслуженную награду, ведь вы не только азартны, но и прекрасны
+    <li>Ждите заслуженную награду, она очень скоро появится <a href="award.html">на доске победителей</a>, ведь вы не только азартны, но и прекрасны
       <br><br>
      P.S. Несмотря на все приложенные усилия, есть вероятность, что коварные беклы(да, именно они) все-таки помешают вам получить приз. 
      Поэтому, если вам кажется, что ваш лотерейный билет был выигрышным, однако вы не увидели сообщения с поздравлением, смело пишите нам!
