--- a/award.html
+++ b/award.html
@@ -208,12 +208,13 @@
 
   <script>
     const images = [
-      { src: "img/43_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
-      { src: "img/44_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" },
+	{ src: "img/43_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
+	{ src: "img/44_ГрэйсГрейлэнд.png", caption: "Староста факультета ГрэйсГрейлэнд, 4 курс" },
+	{ src: "img/45_ФиломенаФламарион.png", caption: "Профессор Филомена Фламарион" },
 
     ];
 
-    const rowPattern = [2];
+    const rowPattern = [3];
     const mainGallery = document.getElementById('main-gallery');
 
     function renderGallery() {
