--- a/award.html
+++ b/award.html
@@ -210,11 +210,35 @@
     const images = [
 	{ src: "img/43_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
 	{ src: "img/44_ГрэйсГрейлэнд.png", caption: "Староста факультета Грэйс Грейлэнд, 4 курс" },
-	{ src: "img/45_ФиломенаФламарион.png", caption: "Профессор Филомена Фламарион" },
+	{ src: "img/45_ФиломенаФламарион.png", caption: "Профессор Филомена Фламарион" }, 
+	{ src: "img/46_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
+	{ src: "img/47_ЭмилияНайт.png", caption: "Эмилия Найт, Подготовительное отделение" },
+	{ src: "img/48_АриаднаФрост.png", caption: "Ариадна Фрост, Гриффиндор, 3 курс" },
+	{ src: "img/49_MarinSeafour.png", caption: "Marin Seafour, Подготовительное отделение" },
+	{ src: "img/50_MarinSeafour.png", caption: "Marin Seafour, Подготовительное отделение" },
+	{ src: "img/51_АлисаИндиго", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+	{ src: "img/52_АлисаИндиго", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+	{ src: "img/53_АлисаИндиго", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+	{ src: "img/54_АлисаИндиго", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+	{ src: "img/55_АлисаИндиго", caption: "Профессор Алиса Индиго, выпускник(зима 2024-2025)" },
+	{ src: "img/56_РогнедаХольмгрен.png", caption: "Профессор Рогнеда Хольмгрен" },
+	{ src: "img/57_РогнедаХольмгрен.png", caption: "Профессор Рогнеда Хольмгрен" },
+	{ src: "img/58_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+	{ src: "img/59_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+	{ src: "img/60_ЭнниМур.png", caption: "Декан факультета Энни Мур, выпускник(весна 2024)" },
+	{ src: "img/61_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+	{ src: "img/62_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+	{ src: "img/63_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+	{ src: "img/64_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+	{ src: "img/65_ДжаредКрин.png", caption: "Профессор Джаред Крин, выпускник(весна 2011)" },
+	{ src: "img/66_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
+	{ src: "img/67_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
+	{ src: "img/68_ЖеневьеваПресли.png", caption: "Женевьева Пресли, выпускница факультета Когтевран" },
+	{ src: "img/69_ВладленКорнуэлл.png", caption: "Владлен Корнуэлл, Когтевран, 1 курс" },
 
     ];
 
-    const rowPattern = [3];
+    const rowPattern = [6, 5, 6, 5, 5];
     const mainGallery = document.getElementById('main-gallery');
 
     function renderGallery() {
